--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: PGR Conference 2023
 description: Page for publsihing content for the 2023 PGR conference.
-theme: jekyll-theme-tactile
+theme: jekyll-theme-time-machine
