--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: PGR Conference 2023
-description: Page for publsihing content for the 2023 PGR conference.
+title: Optimisation of a 1D Family of Polyconvex Functionals
+description: Elliott Sullinge-Farrall
 theme: jekyll-theme-cayman
