--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,4 @@
 title: Optimisation of a 1D Family of Polyconvex Functionals
 description: Elliott Sullinge-Farrall
 
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+theme: cayman
