--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Optimisation of a 1D Family of Polyconvex Functionals
 description: Elliott Sullinge-Farrall
 
-theme: cayman
+theme: jekyll-theme-cayman
